--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run: npm install # Install your project dependencies (assuming you're using npm)
       - run: npm test # Run your tests (assuming you've set up your test script in your `package.json`)
       - store_test_results:
-          path: test-results
+          path: results.xml
 
 
 workflows:
